crates/ruff_python_parser/tests/snapshots/invalid_syntax@expressions__unary__no_expression_1.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/expressions/unary/no_expression_1.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..8,
        body: [
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 0..1,
                    value: UnaryOp(
                        ExprUnaryOp {
                            node_index: NodeIndex(None),
                            range: 0..1,
                            op: UAdd,
                            operand: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 1..1,
                                    id: Name(""),
                                    ctx: Invalid,
                                },
                            ),
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 3..8,
                    value: BinOp(
                        ExprBinOp {
                            node_index: NodeIndex(None),
                            range: 3..8,
                            left: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 3..4,
                                    id: Name("x"),
                                    ctx: Load,
                                },
                            ),
                            op: Add,
                            right: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 7..8,
                                    id: Name("y"),
                                    ctx: Load,
                                },
                            ),
                        },
                    ),
                },
            ),
        ],
        runtime_body: None,
    },
)
```
## Errors

  |
1 | +
  |  ^ Syntax Error: Expected an expression
2 |
3 | x + y
  |
